[package]
name = "rye"
version = "0.1.0-dev"
description = """
A custom unit testing framework inspired by Catch2.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/rye.git"
readme = "README.md"

[features]
frameworks = []

[dependencies]
rye-macros = { version = "=0.1.0-dev", path = "./macros" }
futures = "0.3"
getopts = "0.2"
log = "0.4"
maplit = "1"
maybe-unwind = { version = "0.2.1", features = [ "futures" ] }
pin-project = "0.4"
termcolor = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
futures = { version = "0.3", features = [ "thread-pool" ] }
futures-test = "0.3"
scoped-tls-async = { git = "https://github.com/ubnt-intrepid/scoped-tls-async.git" }
trybuild = "1"

[dev-dependencies.cargo-husky]
version = "1.5"
features = [ "user-hooks" ]
default-features = false

[[test]]
name = "test_integration"
path = "tests/test_integration.rs"
harness = false

[[test]]
name = "test_frameworks"
path = "tests/test_frameworks.rs"
required-features = [ "frameworks" ]

[workspace]
members = [
  ".",
  "macros",
]
