[package]
name = "rye-macros"
version = "0.1.0-dev"
edition = "2018"
description = """
Procedural macros for rye.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/rye.git"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "full", "visit-mut" ] }
quote = "1"
proc-macro2 = "1"
indexmap = "1"
