[package]
name = "rye-runner"
version = "0.0.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
rye = { version = "0.0.1", path = ".." }
console = "0.9"
futures = { version = "0.3", features = [ "thread-pool" ] }
getopts = "0.2"
globset = "0.4"
pin-project = "0.4"
expected = { version = "0.0.1", features = [ "futures" ] }
maybe-unwind = { version = "0.1", features = [ "futures" ] }
