[package]
name = "testcrate"
version = "0.1.0"
publish = false
edition = "2018"

[workspace]

[[test]]
name = "harness"
path = "tests/harness.rs"
harness = false
required-features = [ "harness" ]

[[test]]
name = "frameworks"
path = "tests/frameworks.rs"
required-features = [ "frameworks" ]

[dependencies]
rye = { path = "..", default-features = false }

[features]
harness = [ "rye/harness" ]
frameworks = [ "rye/frameworks" ]
