[package]
name = "rye-xtask"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
name = "xtask"

[[bin]]
name = "xtask_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
fakeenv = { version = "0.1", default-features = false, features = [ "fake" ] }
pico-args = "0.3"
version_check = "0.9"

[dependencies.cargo-husky]
version = "1.5"
features = [ "user-hooks" ]
default-features = false
