[package]
name = "rye-runner-futures"
version = "0.1.0-dev"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
rye = { version = "0.1.0-dev", path = "../..", default-features = false }
futures = { version = "0.3.0", features = [ "thread-pool"] }
