[package]
name = "rye-runner-tokio"
version = "0.1.0-dev"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
rye = { version = "0.1.0-dev", path = "../..", default-features = false }
tokio = { version = "0.2.0", features = [ "full" ] }
futures = "0.3"
pin-project-lite = "0.1"
